[gd_scene load_steps=3 format=2]

[ext_resource path="res://material_maker/panels/preview_2d/custom_size_dialog.gd" type="Script" id=1]
[ext_resource path="res://material_maker/widgets/float_edit/float_edit.tscn" type="PackedScene" id=2]

[node name="WindowDialog" type="WindowDialog"]
visible = true
margin_right = 219.0
margin_bottom = 87.0
window_title = "Custom size"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 6

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 211.0
margin_bottom = 52.0
size_flags_horizontal = 3
columns = 2

[node name="WidthLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Width:"

[node name="Width" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 211.0
margin_bottom = 24.0
size_flags_horizontal = 3
value = 512.0
min_value = 16.0
max_value = 2048.0
step = 1.0
float_only = true

[node name="HeightLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 33.0
margin_right = 104.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Height:"

[node name="Height" parent="VBoxContainer/GridContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_top = 28.0
margin_right = 211.0
margin_bottom = 52.0
size_flags_horizontal = 3
value = 512.0
min_value = 16.0
max_value = 2048.0
step = 1.0
float_only = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 43.0
margin_top = 58.0
margin_right = 167.0
margin_bottom = 78.0
size_flags_horizontal = 4

[node name="OK" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 3
text = "Cancel"

[connection signal="minimum_size_changed" from="." to="." method="_on_WindowDialog_minimum_size_changed"]
[connection signal="popup_hide" from="." to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
